# trix

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/: copilot-instructions.md
cmake/: TrixConfig.cmake.in
demo/: CMakeLists.txt  README.md  capture_ftrace.sh  capture_perf.sh  demo.cpp
doc/: demo_walkthrough.md  docker.md  example.md  tracing.md
doc/backends/: etw.md  ftrace.md  lttng.md  perf.md  vtune.md
doc/viewers/: kernelshark.md  perfetto.md  tracecompass.md
include/trix/: trix.h  trix_version.h
scripts/: capture_ftrace.sh  capture_ftrace_post.sh  capture_ftrace_pre.sh  capture_lttng.sh  capture_lttng_post.sh  capture_lttng_pre.sh  capture_perf.sh  capture_perf_post.sh  capture_perf_pre.sh  capture_vtune.sh  capture_vtune_post.sh  capture_vtune_pre.sh  lttng_to_perfetto.py  perf_to_perfetto.py
smoke/: CMakeLists.txt  smoke.cpp
src/: trix_dispatch.c  trix_internal.h
src/backends/atrace/: atrace_platform.h  backend_atrace.c
src/backends/etw/: backend_etw.c
src/backends/ftrace/: backend_ftrace.c
src/backends/itt/: backend_itt.c  backend_itt.cpp
src/backends/lttng/: backend_lttng.c  trix_lttng_tp.h
src/backends/nop/: backend_nop.c
src/backends/perf/: backend_perf.c  trix_sdt.h
tests/: CMakeLists.txt  test_basic.c  test_cpp.cpp  test_nop.c  test_version.c
tools/perfetto-ui/: Dockerfile
